fix change language for all page index.html, add new style for scrollbar.

--- a/www.handstivan.vn.ua/css/body_style.css
+++ b/www.handstivan.vn.ua/css/body_style.css
@@ -31,3 +31,18 @@ h5 {
     font-size: calc(0.1em + 0.5vw);
 }
 
+/* scroll edit */
+::-webkit-scrollbar {
+    width: 5px;
+    /* ширина нового скроллбара */
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(50, 38, 27);
+    /* цвет фона у дорожки */
+}
+
+::-webkit-scrollbar-thumb {
+    border: 3px solid rgb(82, 59, 28);
+    /* толщина, стиль и цвет рамки */
+}
